--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
+    <span id="musicControl">
+        <a id="mc_play" class="on" onclick="play_music();">
+            <audio id="music" loop="loop" autoplay="autoplay">
+                <source src="./mp3.mp3" type="audio/mpeg">
+            </audio>
+        </a>
+    </span>
 <div id="main">
     <div class="title">
         <img id="title1" src="./image/main/2020.png"></img>
@@ -24,7 +31,7 @@
         <img src="./image/main/main.png">
     </div> 
     <div id="intro">
-        <button  type="button" class="button red" onclick="next()">点击打开</button>
+        <button  type="button" class="button red" onclick="next()">点击阅读</button>
     </div>
 </div>
 <div id="book" style="display:none;">
@@ -118,9 +125,6 @@
         if (currentPage <= pageCount) {
             $(".flipbook").turn('page', currentPage + 1);
         } else {
-            $(document).confirm('已经是最后一页了，再看一遍?', {}, function () {
-            $(".flipbook").turn('page', 1); //跳转页数
-        }
         }
     });
     //返回到目录页
