--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
     <title>比学赶超</title>
+    <link rel="icon" href="./favicon.ico" sizes="32x32">
     <link rel="stylesheet" type="text/css" href="css/basic.css"/>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/modernizr.2.5.3.min.js"></script>
@@ -56,7 +57,7 @@
         <div class="previousPage"></div>
         <div class="nextPage"></div>
         <div class="return"></div>
-        <img class="btnImg" src="./image/btn.gif"/>
+        <img class="btnImg" src="./image/function/btn.gif"/>
         <div class="container">
             <div class="flipbook"></div>
         </div>
