--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
         <div class="number"></div>
     </div>
     <div class="flipbook-viewport" style="display:none;">
-        <div class="previousPage"></div>
+        <!-- <div class="previousPage"></div>
         <div class="nextPage"></div>
         <div class="return"></div>
-        <img class="btnImg" src="./image/function/btn.gif"/>
+        <img class="btnImg" src="./image/function/btn.gif"/> -->
         <div class="container">
             <div class="flipbook"></div>
         </div>
     </div>
 </div>
-<script>
+<!-- <script>
     //自定义仿iphone弹出层
     (function ($) {
         //ios confirm box
@@ -143,6 +143,6 @@
         }, function () {
         });
     });
-</script>
+</script> -->
 </body>
 </html>
