--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
             </audio>
         </a>
     </span>
-    <img id="contentControl" style="display:none; " src="./image/function/next.png" onclick="show()">
+    
+    <div id="contentControl" style="display:none;" onclick="show()">
+        <img src="./image/function/next.png">
+    </div>
+
     <div id="content" style="display:none; ">
            <img src="#">
     </div>
