--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
     <title>2020南昌市工业现代服务业“比学赶超”集中巡看活动回眸</title>
     <link rel="icon" href="./favicon.ico" sizes="32x32">
-    <link rel="stylesheet" type="text/css" href="css/basic.css"/>
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/modernizr.2.5.3.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/zuyiaaa/book/css/basic.css"/>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/zuyiaaa/book/js/jquery.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/zuyiaaa/book/js/modernizr.2.5.3.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/zuyiaaa/book/js/main.js"></script>
 </head>
 <body>
     <span id="musicControl">
